@@ -24,7 +24,6 @@ public class DataLoader implements CommandLineRunner {
 
     @Override
     public void run(String... args) throws Exception {
-        // Solo cargar datos si no existen usuarios
         if (userRepository.count() == 0) {
             loadTestData();
         }
@@ -33,21 +32,101 @@ public class DataLoader implements CommandLineRunner {
     private void loadTestData() {
         System.out.println("Cargando datos de prueba...");
 
-        // Crear usuarios de prueba
+        // --------------------------
+        //        USUARIOS
+        // --------------------------
         User admin = createUser("Admin", "admin@alojamientos.com", "Admin123", Role.ADMIN, false);
+
         User host1 = createUser("Carlos Anfitrión", "carlos@alojamientos.com", "Host123", Role.HOST, true);
+        User host2 = createUser("María López", "maria@alojamientos.com", "Host456", Role.HOST, true);
+
         User guest1 = createUser("Juan Huésped", "juan@alojamientos.com", "Guest123", Role.GUEST, false);
+        User guest2 = createUser("Laura Pérez", "laura@alojamientos.com", "Guest456", Role.GUEST, false);
+        User guest3 = createUser("Andrés Gómez", "andres@alojamientos.com", "Guest789", Role.GUEST, false);
 
-        // Crear alojamientos
-        Place place1 = createPlace("Hermosa finca con piscina",
-                "Finca amplia con piscina, jardín y vistas espectaculares",
-                host1, "Calle 123, Medellín", "Medellín", 150000.0, 8,
-                Arrays.asList("https://example.com/finca1.jpg"),
-                Arrays.asList(Service.POOL, Service.WIFI));
+        // --------------------------
+        //      ALOJAMIENTOS
+        // --------------------------
+        Place place1 = createPlace(
+                "Hermosa finca con piscina",
+                "Finca amplia con piscina y vista a la montaña",
+                host1,
+                "Calle 123, Medellín", "Medellín",
+                150000.0, 8,
+                List.of("https://images.unsplash.com/photo-1507089947368-19c1da9775ae"),
+                List.of(Service.POOL, Service.WIFI)
+        );
 
-        // Crear reservas
-        Booking booking1 = createBooking(guest1, place1,
-                LocalDateTime.now().plusDays(7), LocalDateTime.now().plusDays(10), 4, 450000.0, BookingStatus.CONFIRMED);
+        Place place2 = createPlace(
+                "Apartamento moderno en el centro",
+                "Apartamento nuevo con excelente ubicación y coworking",
+                host2,
+                "Cra 45 #10-20, Bogotá", "Bogotá",
+                200000.0, 4,
+                List.of("https://images.unsplash.com/photo-1560448204-e02f11c3d0e2"),
+                List.of(Service.WIFI)
+        );
+
+        Place place3 = createPlace(
+                "Cabaña rústica en Guatapé",
+                "Cabaña frente al lago con deck privado",
+                host1,
+                "Km 5 Via Peñol", "Guatapé",
+                180000.0, 6,
+                List.of("https://images.unsplash.com/photo-1505692794403-34cb0b2e5e2c"),
+                List.of(Service.WIFI, Service.PARKING)
+        );
+
+        Place place4 = createPlace(
+                "Mini estudio económico",
+                "Ideal para estudiantes o viajeros",
+                host2,
+                "Barrio La Flora", "Cali",
+                90000.0, 2,
+                List.of("https://images.unsplash.com/photo-1501183638710-841dd1904471"),
+                List.of(Service.WIFI)
+        );
+
+        Place place5 = createPlace(
+                "Penthouse de lujo",
+                "Vistas panorámicas y terraza privada",
+                host1,
+                "Av. Las Palmas", "Medellín",
+                450000.0, 5,
+                List.of("https://images.unsplash.com/photo-1494526585095-c41746248156"),
+                List.of(Service.WIFI, Service.POOL, Service.PARKING)
+        );
+
+        Place place6 = createPlace(
+                "Casa campestre familiar",
+                "Ideal para reuniones o descanso",
+                host2,
+                "Km 3 Via Armenia", "Armenia",
+                250000.0, 10,
+                List.of("https://images.unsplash.com/photo-1599423300746-b62533397364"),
+                List.of(Service.POOL, Service.PARKING)
+        );
+
+        // --------------------------
+        //      RESERVAS
+        // --------------------------
+        createBooking(guest1, place1,
+                LocalDateTime.now().plusDays(5),
+                LocalDateTime.now().plusDays(7),
+                4, 300000.0,
+                BookingStatus.CONFIRMED);
+
+        createBooking(guest2, place2,
+                LocalDateTime.now().plusDays(10),
+                LocalDateTime.now().plusDays(13),
+                2, 400000.0,
+                BookingStatus.PENDING);
+
+        createBooking(guest3, place3,
+                LocalDateTime.now().plusDays(15),
+                LocalDateTime.now().plusDays(18),
+                3, 540000.0,
+                BookingStatus.CONFIRMED);
 
         System.out.println("Datos de prueba cargados exitosamente!");
     }
@@ -68,6 +147,7 @@ public class DataLoader implements CommandLineRunner {
 
     private Place createPlace(String title, String description, User host, String address, String city,
                               Double price, Integer maxGuests, List<String> images, List<Service> services) {
+
         Place place = new Place();
         place.setTitle(title);
         place.setDescription(description);
@@ -95,6 +175,7 @@ public class DataLoader implements CommandLineRunner {
 
     private Booking createBooking(User guest, Place place, LocalDateTime checkIn, LocalDateTime checkOut,
                                   Integer guests, Double price, BookingStatus status) {
+
         Booking booking = new Booking();
         booking.setGuest(guest);
         booking.setPlace(place);
